tests/parser/bad/exps/type_t-map-cid-lparen-cid-lparen-with.scilexp
let a : (Map Uint128 (Option (nothing))) = Emp Uint128 (Option (nothing))
